<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.StartActivity">

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/splashs1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_splash"
        android:text="@string/every_bite_tells_a_story_enjoy_the_meal"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/youngserif_regular"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/button_green"
        android:text="@string/next"
        android:id="@+id/btn_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/designby_n_neat_root"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>