<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoingActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/frabur"/>

    <TextView
        android:id="@+id/txt_nameR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grill_gravy"
        android:textColor="@color/text_color"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_version"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nameR"
        android:text="@string/sear_it_smother_it_serve_it"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"

        />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Login To Yuor Account"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_version" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login"
            android:id="@+id/txt_email"
            android:padding="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:id="@+id/edt_email"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"


                />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        android:id="@+id/txt_password"
        app:passwordToggleEnabled="true"        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:id="@+id/txt_or"
        android:textSize="20sp"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Continue With"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:background="@drawable/white_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/facebook"
        android:text="faceBook"
        android:padding="16dp"
        android:drawablePadding="8dp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/google"
        android:text="Google"
        android:padding="15dp"
        android:drawablePadding="8dp"
        android:background="@drawable/white_background"
        android:layout_marginTop="16dp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="Login"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_green"
        />

    <TextView
        android:id="@+id/txt_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Don't have Account"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />




</androidx.constraintlayout.widget.ConstraintLayout>